CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
CMAKE_POLICY(VERSION 2.8)

PROJECT(tsdb_cpp_client_demo)

AUX_SOURCE_DIRECTORY(. DIR_SRCS)

IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
    LINK_LIBRARIES(gtest pthread)
    SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb")
    SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
ENDIF()

SET(CMAKE_BUILD_TYPE "Debug")

# 查找Zstandard库
FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(ZSTD REQUIRED libzstd)

# 包含目录
INCLUDE_DIRECTORIES(${ZSTD_INCLUDE_DIRS})

ADD_EXECUTABLE(tsdb_cpp_client_demo ${DIR_SRCS})

# 链接Zstandard库
TARGET_LINK_LIBRARIES(tsdb_cpp_client_demo ${ZSTD_LIBRARIES})
